# fojinquiz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled Diagram.drawio  alembic.ini  createsuperuser.py  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  test  test.db  traefik.dev.toml
migrations/: env.py
migrations/versions/: 02d906a5e14b_changed_relation.py  060ea987494d_nope.py  06af7f5836dc_added_all_models.py  09b691e69aac_changed_relation.py  19b83fb3ed6b_added_ordering.py  1e7e45e70428_added_foreign_key_from_tests_to_user_.py  1f729666af1d_added_lazy_load_for_question_test.py  23077980de3f_delete_published_date_from_test_model.py  29a9a696b57b_changed_relation.py  3453bb53fafe_ordering_fix.py  3a5c0003d7f6_refactored_relation.py  3e8d5e4b0c81_add_user_id_useranswers.py  40a1d6dfdd83_.py  4daf133f7099_added_is_admin_flag.py  60b978c6fa58_changed_email_field_to_username.py  60cb7bffea0d_init.py  62335d355a13_added_backrefs.py  69d989a0ab51_fixed_bug_with_nullable_username_and_.py  6cf3fa8b3f96_initial_database_creating.py  7070ae471b99_image_model.py  7f9557779545_initial_migration.py  a13a055d34d1_initial_database_models.py  a2d5a7901730_refactored_relation.py  acf63ad2d0c7_nope.py  (+10 more)
quiz_project/: __init__.py  conf.py  database.py  middlewares.py
sql_app/: crud.py  models.py
test_app/: __init__.py  crud.py  models.py  schemas.py  views.py
tests/: conftest.py  test_tests.py  test_user.py
user_app/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
(+37 files in other folders)
