[tool.poetry]
name = "exceedteamquiz"
version = "0.1.0"
description = ""
authors = ["solo <dsogomonian.exceed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
fastapi-jwt-auth = "^0.5.0"
greenlet = "^1.1.2"
uvicorn = "^0.17.5"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
