[tool.poetry]
name = "exceedteamquiz"
version = "0.1.0"
description = ""
authors = ["solo <dsogomonian.exceed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
fastapi-jwt-auth = "^0.5.0"
greenlet = "^1.1.2"
pytz = "^2021.3"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
python-dotenv = "^0.19.2"
asyncpg = "^0.25.0"
black = "^22.3.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
websockets = "^10.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-engineio = "^4.3.2"
python-socketio = "^5.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
